Update css for cover area

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 home-title: Kemal AKIN
-description: Jekyll
+description: my web notes
+cover: assets/img/cover.png
 ---
 
 {% include header.html %}
@@ -102,5 +103,3 @@ description: Jekyll
 </main>
 
 {% include footer.html %}
-
-                            
