--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 home-title: Kemal AKIN
-description: my web notes
+description: software developer
 cover: assets/img/cover.png
 ---
 
